Cancel Web Touches Properly so that long presses on YouTube links do not incorrectly trigger a load https://bugs.webkit.org/show_bug.cgi?id=193687 <rdar://problem/47056717>

Reviewed by Tim Horton.

Cancel web gestures when a long press is recognized.

* Platform/spi/ios/UIKitSPI.h:
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _cancelWebGestureRecognizer]):
(-[WKContentView _longPressRecognized:]):


Canonical link: https://commits.webkit.org/208216@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240316 268f45cc-cd09-0410-ab3c-d52691b4dbfc